--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.0.14",
     "@quasar/vite-plugin": "^1.2.3",
     "@types/node": "^16.11.60",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
@@ -41,6 +42,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.5.1",
+    "happy-dom": "^7.4.0",
     "jsdom": "^20.0.1",
     "sass": "1.32.12",
     "typescript": "^4.8.4",
