--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "vite preview",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --ignore-path .gitignore --fix",
     "format": "prettier --write ./**/*.{vue,ts,tsx,js,jsx,css,less,scss,json,md}",
-    "test": "vitest",
+    "test": "vitest --run --coverage --reporter verbose",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "cypress open"
   },
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "@vitejs/plugin-vue": "^3.1.2",
+    "@vitest/coverage-istanbul": "^0.24.1",
     "@vue/test-utils": "^2.1.0",
     "cypress": "^10.9.0",
     "eslint": "^8.25.0",
