--- a/package.json
+++ b/package.json
@@ -16,38 +16,38 @@
     "test:e2e": "cypress open"
   },
   "dependencies": {
-    "@quasar/extras": "^1.15.4",
+    "@quasar/extras": "^1.15.5",
     "@vueuse/core": "^9.3.0",
     "@vueuse/math": "^9.3.0",
     "@vueuse/shared": "^9.3.0",
-    "axios": "^0.27.2",
-    "dotenv": "^10.0.0",
-    "pinia": "^2.0.22",
-    "quasar": "^2.8.4",
+    "axios": "^1.1.2",
+    "pinia": "^2.0.23",
+    "quasar": "^2.10.0",
     "tslib": "^2.4.0",
-    "vue": "^3.2.40",
-    "vue-router": "^4.1.5"
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.5",
+    "vue3-google-login": "^2.0.12"
   },
   "devDependencies": {
     "@pinia/testing": "^0.0.14",
     "@quasar/vite-plugin": "^1.2.3",
     "@types/node": "^16.11.60",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "@vitejs/plugin-vue": "^3.1.2",
-    "@vitest/coverage-istanbul": "^0.24.1",
+    "@vitest/coverage-istanbul": "^0.24.3",
     "@vue/test-utils": "^2.1.0",
-    "cypress": "^10.9.0",
+    "cypress": "^10.10.0",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.6.0",
-    "happy-dom": "^7.4.0",
+    "happy-dom": "^7.5.12",
     "sass": "1.32.12",
     "typescript": "^4.8.4",
-    "vite": "^3.1.6",
-    "vitest": "^0.23.4",
-    "vue-tsc": "^1.0.1"
+    "vite": "^3.1.8",
+    "vitest": "^0.24.3",
+    "vue-tsc": "^1.0.7"
   }
 }
