--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "quasar": "^2.10.2",
     "tslib": "^2.4.1",
     "vue": "^3.2.45",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vue3-google-login": "^2.0.12"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@pinia/testing": "^0.0.14",
     "@quasar/vite-plugin": "^1.2.3",
     "@types/node": "^18.11.11",
