--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
-    "types": ["node", "vite/client", "vitest", "vitest/globals"],
+    "types": ["node", "vite/client", "vitest", "vitest/globals", "@intlify/vite-plugin-vue-i18n/client"],
     "paths": {
       "src/*": ["src/*"],
       "/src/*": ["src/*"],
