--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,3 @@
-
 {
   "recommendations": [
     "dbaeumer.vscode-eslint",
@@ -9,7 +8,7 @@
     "christian-kohler.npm-intellisense",
     "codecoaching.quasar-docs",
     "vue.volar",
-    "eg2.vscode-npm-script",
-    "formulahendry.auto-close-tag"
+    "formulahendry.auto-close-tag",
+    "lokalise.i18n-ally"
   ]
 }
