--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --write ./**/*.{vue,ts,tsx,js,jsx,css,less,scss,json,md}",
     "test": "vitest --run --coverage --reporter verbose",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "cypress open"
+    "cy:open": "npx cypress open --browser=edge",
+    "cy:run": "npx cypress run"
   },
   "dependencies": {
     "@quasar/extras": "^1.15.7",
@@ -33,6 +34,7 @@
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@pinia/testing": "^0.0.14",
     "@quasar/vite-plugin": "^1.2.3",
+    "@types/cypress": "^1.1.3",
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
