--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "cy:run": "npx cypress run"
   },
   "dependencies": {
-    "@quasar/extras": "^1.15.9",
-    "@vueuse/core": "^9.10.0",
-    "@vueuse/math": "^9.10.0",
-    "@vueuse/shared": "^9.10.0",
-    "axios": "^1.2.2",
-    "pinia": "^2.0.28",
+    "@quasar/extras": "^1.15.10",
+    "@vueuse/core": "^9.11.1",
+    "@vueuse/math": "^9.11.1",
+    "@vueuse/shared": "^9.11.1",
+    "axios": "^1.2.4",
+    "pinia": "^2.0.29",
+    "pinia-plugin-persist": "^1.0.0",
     "quasar": "^2.11.5",
     "tslib": "^2.4.1",
     "vue": "^3.2.45",
@@ -31,22 +32,22 @@
     "@pinia/testing": "^0.0.14",
     "@quasar/vite-plugin": "^1.3.0",
     "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vitest/coverage-istanbul": "^0.27.1",
+    "@vitest/coverage-istanbul": "^0.28.1",
     "@vue/test-utils": "^2.2.7",
-    "cypress": "^12.3.0",
-    "eslint": "^8.31.0",
+    "cypress": "^12.4.0",
+    "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
-    "happy-dom": "^8.1.4",
+    "happy-dom": "^8.1.5",
     "sass": "1.32.12",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
-    "vitest": "^0.27.1",
+    "vitest": "^0.28.1",
     "vue-tsc": "^1.0.24"
   }
 }
